src/test/deca/context/invalid/renduInitial/02doubledecl.deca
{
	int x ;
	int y ;
	int z ;
	int y ;
	z=1 ;
}